<resources>
    <string name="app_name" translatable="false">Discuss</string>
    <string name="mangaAnime">Manga/Anime</string>
    <string name="love">Love</string>
    <string name="videoGames">Video Games</string>
    <string name="space">Space</string>
    <string name="culture">Culture</string>
    <string name="music">Music</string>
    <string name="room_name">Room Name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="keep_name">Keep this name</string>
    <string name="who_are_you">Who are you ?</string>
    <string name="help">Help !</string>
    <string name="rooms">Rooms</string>
    <string name="chat">Chat</string>
    <string name="create_room">Create a room</string>
    <string name="search_a_subject">Search a subject…</string>
    <string name="enter_name">Enter your name</string>
    <string name="failed_connection">Connection failed</string>
    <string name="failed_connection_description">Unable to connect to the server, verify your internet connection. ^^</string>
    <string name="type_message">Type a message</string>
    <string name="subjects">Subjects</string>
    <string name="need_help">I need your help !</string>
    <string name="help_desc">Hi ! As you can see, there are not many people in here.</string>
    <string name="setting_icon">Setting icon</string>
    <string name="send_icon">Send icon</string>
    <string name="back_button_icon">Back button icon</string>
    <string name="background_image">Background image</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="name_taken_error">Name taken :c</string>
    <string name="create_icon">Create icon</string>
    <string name="enter_room_name">Enter a room name…</string>
    <string name="user_has_joined">%1$s has joined the room.</string>
    <string name="user_has_left">%1$s has left the room.</string>
    <string name="user_kicked">%1$s has been kicked from the room.</string>
    <string name="user_new_host">%1$s is now the host of the room.</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="got_kicked">You have been kicked from the room</string>
    <string name="alright">Alright…</string>
    <string name="kick">Kick</string>
    <string name="reply">Reply</string>
    <string name="icon_desc">User icon</string>
    <string name="discuss_desc">discuss icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
