<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/subjectBackgroundImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/space"

        />


    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chelsea"
        android:text="@string/space"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/user_icon"
            />
        <TextView
            android:id="@+id/userCount"
            android:layout_marginStart="7sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            />
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/heart_icon"
        android:id="@+id/heart"
        android:padding="12dp"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:tint="@color/red"
        android:src="@drawable/liked_heart_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>