<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintWidth_percent="1"
    android:background="@color/white"
    tools:context=".Fragments.SubjectsFragment"
    android:id="@+id/fragment"
    >

    <androidx.appcompat.widget.SearchView
        android:background="@color/white"
        app:queryHint="@string/search_a_subject"
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/subjects"
        android:fontFamily="@font/chelsea"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!--
     <ImageView
        android:contentDescription="@string/setting_icon"
        android:id="@+id/settingBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout"
        android:padding="20dp"
        android:background="@color/white"

        />
     -->



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/subjectsRecycler"
        tools:listitem="@layout/subject_list_item"


        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/floatingBtn"
        android:background="@drawable/floating_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="70dp"

        >


        <TextView
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            />
    </LinearLayout>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>